[gd_scene load_steps=2 format=3 uid="uid://c7oleeqo3e1de"]

[ext_resource type="Script" path="res://ButtonMenu.gd" id="1_3f16s"]

[node name="ButtonMenu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3f16s")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ExpandButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
toggle_mode = true
text = "NAME"
alignment = 0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Button2" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "NAME"
alignment = 0
clip_text = true
